--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "highcharts-react-official": "^3.2.0",
     "react": "^18.1.0",
     "react-data-table-component": "^7.5.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
